feat implementeer spel modus
